--- a/src/ui/SocialHandles/SocialHandles.css
+++ b/src/ui/SocialHandles/SocialHandles.css
@@ -37,8 +37,7 @@
    content: "";
    height: 8px;
    width: 8px;
-   background: linear-gradient(
-    260deg, 
+   background: linear-gradient(260deg, 
    var(--color-dark) 0%, 
    var(--color-primary) 100%);
 
