--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -88,7 +88,7 @@
     }
 }
 .yay {
-    color: #e27923; /* Example color */
+    color: #ad3ee8; /* Example color */
     font-weight: bold;
     text-shadow: 0px 0px 10px rgba(216, 225, 153, 0.8);
     font-size: 35px;
